add presentation 3rd

--- a/index.qmd
+++ b/index.qmd
@@ -52,7 +52,7 @@ Participants could familiarize themselves with [info given on this link](materia
 
 ### 1st day Dec 3rd
 
-Teresa (1h)
+Teresa (1h)[presentation slides] (materials/wednesday-3rd/fisheries_acoustics_ts.pptx)
 
 -   Basic acoustic theory
 
