update adcp-ek-bot, add double-repeat

--- a/index.qmd
+++ b/index.qmd
@@ -49,7 +49,6 @@ subtitle: "3 day workshop at Hafró/MFRI in preparation for the capelin surveys"
 
 Participants could familiarize themselves with [info given on this link](materials/recycle.qmd).
 
-
 ### 1st day Dec 3rd
 
 Teresa (1/2 h) [presentation slides](materials/wednesday-3rd/fisheries_acoustics_ts.pptx)
@@ -82,19 +81,24 @@ Teresa (1h)
 
 -   When to sample during the capelin surveys! Timing Acoustic Surveys for Stock Assessment.
 
- Sigurvin & Sigurður (1h)
+Sigurvin & Sigurður (1h)
 
 [Sonar Profos & ICES metadata](materials/thursday-4th/sigurvin/LSSS_course_sigurvin.pptx)
 
 [EK80 Processed data](materials/thursday-4th/siggi/adcp-ek-bot-lsss/)
 
-    -   Discussion about trawl trajectory on echogram with Marport/Scanmar integration
+[Double coverage](materials/thursday-4th/siggi/double-repeat/)
 
-  Sigurður & Teresa
+
+```         
+-   Discussion about trawl trajectory on echogram with Marport/Scanmar integration
+```
+
+Sigurður & Teresa
 
 -   Continuation with the scrutinization
 
-<!--[Teresa's slides](materials/monday/teresa/Post-processing_LSSS_teresa_Silva.pptx) and [simple demo](materials/monday/teresa/SimpleDemo.zip).->
+\<!--[Teresa's slides](materials/monday/teresa/Post-processing_LSSS_teresa_Silva.pptx) and [simple demo](materials/monday/teresa/SimpleDemo.zip).-\>
 
 ### Other information:
 
